@@ -1,3 +1,7 @@
+2001-06-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* glines.c (load_properties): Remove pointless code.
+
 2001-06-11  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	Apply part of a patch from drk@sgi.com
